--- a/starter/sass/_components.scss
+++ b/starter/sass/_components.scss
@@ -448,3 +448,19 @@
         z-index: 1;
     }
 }
+
+
+//////////////////////////////////////
+// CALL TO ACTION
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+    flex-basis: 100%;
+
+    &__book-now {
+        font-size: 1.2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
